--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Kinde Auth SDK for NextJS",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "jest",
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
@@ -13,6 +14,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "react": "^18.1.0"
+    "@babel/core": "^7.17.12",
+    "@babel/preset-react": "^7.17.12",
+    "@rollup/plugin-babel": "^5.3.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "rollup": "^2.73.0",
+    "rollup-plugin-terser": "^7.0.2"
+  },
+  "peerDependencies": {
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   }
 }
