--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
   "peerDependencies": {
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
+  },
+  "dependencies": {
+    "cookie": "^0.5.0",
+    "crypto": "^1.0.1"
   }
 }
