--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "dependencies": {
     "cookie": "^0.5.0",
-    "crypto": "^1.0.1"
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
+    "simple-oauth2": "^4.3.0"
   }
 }
