--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
     "@babel/core": "^7.17.12",
     "@babel/preset-react": "^7.17.12",
     "@rollup/plugin-babel": "^5.3.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
     "rollup": "^2.73.0",
     "rollup-plugin-terser": "^7.0.2"
   },
@@ -31,6 +29,7 @@
     "cookie": "^0.5.0",
     "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
+    "jwt-decode": "^3.1.2",
     "simple-oauth2": "^4.3.0"
   }
 }
