--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@kinde-oss/kinde-auth-nextjs",
   "version": "1.1.0",
   "description": "Kinde Auth SDK for NextJS",
-  "main": "bundle.js",
+  "main": "dist/bundle.js",
   "types": "index.d.ts",
   "scripts": {
     "test": "jest",
