--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "types": "index.d.ts",
   "type": "module",
   "scripts": {
-    "test": "jest",
-    "build": "rollup -c"
+    "build": "genversion --es6 src/utils/version.js && rollup -c",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
     "@babel/core": "^7.17.12",
     "@babel/preset-react": "^7.17.12",
     "@rollup/plugin-babel": "^5.3.1",
+    "genversion": "^3.1.1",
     "rollup": "^2.73.0",
     "rollup-plugin-terser": "^7.0.2"
   },
