--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "@kinde-oss/kinde-auth-nextjs",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Kinde Auth SDK for NextJS",
-  "main": "dist/kinde-auth-nextjs.common.js",
-  "module": "dist/kinde-auth-nextjs.esm.js",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "type": "module",
   "scripts": {
     "build": "genversion --es6 src/utils/version.js && rollup -c",
     "test": "jest"
