--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "types": "index.d.ts",
   "scripts": {
     "build": "genversion --es6 src/utils/version.js && rollup -c",
-    "test": "jest"
+    "test": "jest",
+    "release": "release-it",
+    "lint": "eslint --ignore-path .eslintignore --ext .js"
   },
   "author": {
     "name": "Kinde",
@@ -23,6 +25,8 @@
     "@babel/core": "^7.17.12",
     "@babel/preset-react": "^7.17.12",
     "@rollup/plugin-babel": "^5.3.1",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
     "genversion": "^3.1.1",
     "rollup": "^2.73.0",
     "rollup-plugin-terser": "^7.0.2"
