--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "crypto-js": "^4.1.1",
     "jwt-decode": "^3.1.2",
     "prettier": "^2.8.8",
+    "release-it": "^15.10.3",
     "simple-oauth2": "^4.3.0"
   },
   "files": [
