--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^18.1.0"
   },
   "dependencies": {
+    "@kinde-oss/kinde-typescript-sdk": "^1.0.3",
     "cookie": "^0.5.0",
     "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
