--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Kinde Auth SDK for NextJS",
   "main": "dist/cjs/index.js",
   "module": "dist/index.js",
-  "typings": "index.d.ts",
+  "typings": "dist/index.d.ts",
   "scripts": {
-    "build": "genversion --es6 src/utils/version.js && rollup -c",
+    "build": "npx tsc && genversion --es6 src/utils/version.js && rollup -c",
     "build:watch": "genversion --es6 src/utils/version.js && rollup -c -w",
     "test": "jest",
     "release": "release-it",
@@ -28,6 +28,7 @@
     "@babel/preset-react": "^7.17.12",
     "@rollup/plugin-babel": "^5.3.1",
     "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.10",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "genversion": "^3.1.1",
@@ -38,6 +39,7 @@
     "typescript": "^5.1.3"
   },
   "peerDependencies": {
+    "next": "^12.2.5 || ^13",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
