--- a/server/package.json
+++ b/server/package.json
@@ -3,5 +3,5 @@
   "private": true,
   "main": "../dist/server/cjs/index.js",
   "module": "../dist/server/index.js",
-  "typings": "index.d.ts"
+  "typings": "../dist/server/index.d.ts"
 }
