--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
   "dependencies": {
     "@kinde-oss/kinde-typescript-sdk": "^2.2.0",
     "cookie": "^0.5.0",
-    "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "jwt-decode": "^3.1.2",
-    "simple-oauth2": "^4.3.0"
+    "simple-oauth2": "^4.3.0",
+    "uncrypto": "^0.1.3"
   },
   "files": [
     "LICENSE.md",
