Add prepare script for npm installs from github

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "typings": "index.d.ts",
   "scripts": {
     "build": "genversion --es6 src/utils/version.js && rollup -c",
+    "prepare": "genversion --es6 src/utils/version.js && rollup -c",
     "build:watch": "genversion --es6 src/utils/version.js && rollup -c -w",
     "test": "jest",
     "release": "release-it",
