--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kinde-oss/kinde-auth-nextjs",
-  "version": "2.0.0-alpha.2",
+  "version": "2.0.0",
   "description": "Kinde Auth SDK for NextJS",
   "main": "dist/cjs/index.js",
   "module": "dist/index.js",
@@ -29,6 +29,7 @@
     "@rollup/plugin-babel": "^5.3.1",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.10",
+    "changelogen": "^0.5.5",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "genversion": "^3.1.1",
