--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "typescript": "^5.1.3"
   },
   "peerDependencies": {
-    "next": "^12.2.5 || ^14",
+    "next": "^12.2.5 || ^13 || ^14",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
