types: session types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,8 @@
     // go to js file when using IDE functions like
     // "Go to Definition" in VSCode
     "declarationMap": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "checkJs": true,
+    "strict": true
   }
 }
