--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/core": "^7.17.12",
     "@babel/preset-react": "^7.17.12",
     "@rollup/plugin-babel": "^5.3.1",
+    "@types/cookie": "^0.5.3",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.10",
     "changelogen": "^0.5.5",
