types: auth provider + some bug fixes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,8 @@
     // "Go to Definition" in VSCode
     "declarationMap": true,
     "esModuleInterop": true
+    // "checkJs": true,
+    // "strict": true,
+    // "jsx": "react"
   }
 }
