feat: add playground

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build:watch": "genversion --es6 src/utils/version.js && rollup -c -w",
     "test": "jest",
     "release": "release-it",
-    "lint": "eslint --ignore-path .eslintignore --ext .js"
+    "lint": "eslint --ignore-path .eslintignore --ext .js",
+    "dev:prepare": "rm -rf playground && git clone https://github.com/kinde-starter-kits/kinde-nextjs-app-router-starter-kit playground && npm link && cd playground && mv .env.local.sample .env.local && npm uninstall @kinde-oss/kinde-auth-nextjs && rm -rf .git && npm link @kinde-oss/kinde-auth-nextjs",
+    "dev": "cd playground && npm run dev"
   },
   "author": {
     "name": "Kinde",
