chore: trying to get rollup to work

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,6 @@
     // go to js file when using IDE functions like
     // "Go to Definition" in VSCode
     "declarationMap": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true
+    "esModuleInterop": true
   }
 }
