--- a/package.json
+++ b/package.json
@@ -2,10 +2,35 @@
   "name": "@kinde-oss/kinde-auth-nextjs",
   "version": "2.0.3",
   "description": "Kinde Auth SDK for NextJS",
-  "main": "dist/cjs/index.js",
-  "module": "dist/index.js",
   "type": "module",
-  "types": "dist/index.d.ts",
+  "module": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "files": [
+    "LICENSE.md",
+    "package.json",
+    "package-lock.json",
+    "readme.md",
+    "dist",
+    "server",
+    "components",
+    "types.d.ts"
+  ],
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./components": {
+      "types": "./dist/components/index.d.ts",
+      "default": "./dist/components/index.js"
+    },
+    "./server": {
+      "types": "./dist/server/index.d.ts",
+      "default": "./dist/server/index.js"
+    }
+  },
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "npx tsc && genversion --es6 src/utils/version.js && rollup -c",
     "prepare": "genversion --es6 src/utils/version.js && rollup -c",
@@ -30,6 +55,7 @@
   "devDependencies": {
     "@babel/preset-react": "^7.22.15",
     "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.22",
@@ -54,17 +80,6 @@
     "cookie": "^0.5.0",
     "crypto-js": "^4.1.1",
     "jwt-decode": "^3.1.2",
-    "simple-oauth2": "^4.3.0",
     "uncrypto": "^0.1.3"
-  },
-  "files": [
-    "LICENSE.md",
-    "package.json",
-    "package-lock.json",
-    "readme.md",
-    "dist",
-    "server",
-    "components",
-    "types.d.ts"
-  ]
+  }
 }
