--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
   "exports": {
     "./package.json": "./package.json",
     ".": {
-      "types": "./dist/types/index.d.ts",
+      "types": "./dist/index.d.ts",
       "default": "./dist/index.js"
     },
     "./components": {
-      "types": "./dist/types/components/index.d.ts",
+      "types": "./dist/components/index.d.ts",
       "default": "./dist/components/index.js"
     },
     "./server": {
-      "types": "./dist/types/server/index.d.ts",
+      "types": "./dist/server/index.d.ts",
       "default": "./dist/server/index.js"
     },
     "./middleware": {
-      "types": "./dist/types/middleware/index.d.ts",
+      "types": "./dist/middleware/index.d.ts",
       "default": "./dist/middleware/index.js"
     }
   },
