fix: pages router

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,7 @@
     // "Go to Definition" in VSCode
     "declarationMap": true,
     "esModuleInterop": true
+    // "checkJs": true,
+    // "strict": true
   }
 }
