--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kinde-oss/kinde-auth-nextjs",
-  "version": "2.0.8",
+  "version": "2.0.8-beta.1",
   "description": "Kinde Auth SDK for NextJS",
   "type": "module",
   "module": "dist/index.js",
