--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kinde-oss/kinde-auth-nextjs",
-  "version": "2.0.8-beta.2",
+  "version": "2.0.8-beta.1",
   "description": "Kinde Auth SDK for NextJS",
   "type": "module",
   "module": "dist/index.js",
@@ -20,19 +20,23 @@
     "./package.json": "./package.json",
     ".": {
       "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
+      "default": "./dist/index.js",
+      "require": "./dist/index.js"
     },
     "./components": {
       "types": "./dist/components/index.d.ts",
-      "default": "./dist/components/index.js"
+      "default": "./dist/components/index.js",
+      "require": "./dist/components/cjs/index.js"
     },
     "./server": {
       "types": "./dist/server/index.d.ts",
-      "default": "./dist/server/index.js"
+      "default": "./dist/server/index.js",
+      "require": "./dist/server/cjs/index.js"
     },
     "./middleware": {
       "types": "./dist/middleware/index.d.ts",
-      "default": "./dist/middleware/index.js"
+      "default": "./dist/middleware/index.js",
+      "require": "./dist/middleware/cjs/index.js"
     }
   },
   "types": "./dist/index.d.ts",
