--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.10",
     "changelogen": "^0.5.5",
+    "dts-bundle-generator": "^8.1.2",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "genversion": "^3.1.1",
