--- a/components/package.json
+++ b/components/package.json
@@ -3,5 +3,5 @@
   "private": true,
   "main": "../dist/components/cjs/index.js",
   "module": "../dist/components/index.js",
-  "typings": "../dist/components/index.d.ts"
+  "typings": "../dist/types/components/index.d.ts"
 }
