--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Kinde Auth SDK for NextJS",
   "main": "dist/cjs/index.js",
   "module": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "typings": "dist/types/index.d.ts",
   "scripts": {
     "build": "npx tsc && genversion --es6 src/utils/version.js && rollup -c",
     "prepare": "genversion --es6 src/utils/version.js && rollup -c",
@@ -28,6 +28,7 @@
     "@babel/core": "^7.17.12",
     "@babel/preset-react": "^7.17.12",
     "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@types/cookie": "^0.5.3",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.10",
@@ -40,6 +41,7 @@
     "release-it": "^16.1.3",
     "rollup": "^2.73.0",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-ts": "^3.4.5",
     "typescript": "^5.1.3"
   },
   "peerDependencies": {
@@ -63,6 +65,6 @@
     "dist",
     "server",
     "components",
-    "index.d.ts"
+    "types.d.ts"
   ]
 }
