--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@kinde-oss/kinde-auth-nextjs",
   "version": "2.0.2-beta.6",
   "description": "Kinde Auth SDK for NextJS",
-  "type": "module",
+  "main": "dist/cjs/index.js",
   "module": "dist/index.js",
   "typings": "dist/types/index.d.ts",
   "scripts": {
@@ -35,7 +35,6 @@
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.10",
     "changelogen": "^0.5.5",
-    "dts-bundle-generator": "^8.1.2",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "genversion": "^3.1.1",
@@ -43,7 +42,6 @@
     "release-it": "^16.1.3",
     "rollup": "^2.73.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-ts": "^3.4.5",
     "typescript": "^5.1.3"
   },
   "peerDependencies": {
