--- a/package.json
+++ b/package.json
@@ -29,19 +29,25 @@
   "devDependencies": {
     "@babel/core": "^7.17.12",
     "@babel/preset-react": "^7.17.12",
+    "@babel/preset-typescript": "^7.23.3",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-typescript": "^11.1.5",
+    "@testing-library/react": "^14.2.1",
     "@types/cookie": "^0.5.3",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.10",
     "changelogen": "^0.5.5",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "genversion": "^3.1.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.0.1",
     "release-it": "^16.1.3",
     "rollup": "^2.73.0",
     "rollup-plugin-terser": "^7.0.2",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.1.3"
   },
   "peerDependencies": {
@@ -50,6 +56,7 @@
     "react-dom": "^18.1.0"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.23.9",
     "@kinde-oss/kinde-typescript-sdk": "^2.6.2",
     "cookie": "^0.5.0",
     "crypto-js": "^4.1.1",
