--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@babel/core": "^7.17.12",
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.23.3",
+    "@playwright/test": "^1.41.2",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-typescript": "^11.1.5",
     "@testing-library/react": "^14.2.1",
     "@types/cookie": "^0.5.3",
     "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.16",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.10",
     "changelogen": "^0.5.5",
