--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npx tsc && cp types.d.ts dist/types.d.ts && genversion --es6 src/utils/version.js && rollup -c",
     "prepare": "genversion --es6 src/utils/version.js && rollup -c",
     "build:watch": "genversion --es6 src/utils/version.js && rollup -c -w",
-    "test": "jest",
+    "test": "vitest",
     "release": "release-it",
     "lint": "eslint --ignore-path .eslintignore --ext .js",
     "dev:prepare": "rm -rf playground && git clone https://github.com/kinde-starter-kits/kinde-nextjs-app-router-starter-kit playground && npm link && cd playground && mv .env.local.sample .env.local && npm uninstall @kinde-oss/kinde-auth-nextjs && rm -rf .git && npm link @kinde-oss/kinde-auth-nextjs",
@@ -29,26 +29,22 @@
   "devDependencies": {
     "@babel/core": "^7.17.12",
     "@babel/preset-react": "^7.17.12",
-    "@babel/preset-typescript": "^7.23.3",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-typescript": "^11.1.5",
     "@testing-library/react": "^14.2.1",
     "@types/cookie": "^0.5.3",
-    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.10",
     "changelogen": "^0.5.5",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "genversion": "^3.1.1",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.0.1",
     "release-it": "^16.1.3",
     "rollup": "^2.73.0",
     "rollup-plugin-terser": "^7.0.2",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "vitest": "^1.2.2"
   },
   "peerDependencies": {
     "next": "^12.2.5 || ^13 || ^14",
