--- a/.release-it.json
+++ b/.release-it.json
@@ -1,6 +1,6 @@
 {
   "git": {
-    "requireBranch": "main",
+    "requireBranch": "release/1.x",
     "commitMessage": "chore: release v${version}"
   },
   "hooks": {
