test: added some tests and added coverage reporting

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "genversion --es6 src/utils/version.js && rollup -c",
     "build:watch": "genversion --es6 src/utils/version.js && rollup -c -w",
     "test": "vitest",
+    "test:coverage": "vitest --coverage",
     "release": "release-it",
     "lint": "eslint --ignore-path .eslintignore --ext .js",
     "dev:prepare": "rm -rf playground && git clone https://github.com/kinde-starter-kits/kinde-nextjs-app-router-starter-kit playground && npm link && cd playground && mv .env.local.sample .env.local && npm uninstall @kinde-oss/kinde-auth-nextjs && rm -rf .git && npm link @kinde-oss/kinde-auth-nextjs",
@@ -35,10 +36,12 @@
     "@types/cookie": "^0.5.3",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.10",
+    "@vitest/coverage-v8": "^1.2.2",
     "changelogen": "^0.5.5",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "genversion": "^3.1.1",
+    "jsdom": "^24.0.0",
     "prettier": "^3.0.1",
     "release-it": "^16.1.3",
     "rollup": "^2.73.0",
