--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.23.9",
-    "@kinde-oss/kinde-typescript-sdk": "^2.8.0",
+    "@kinde-oss/kinde-typescript-sdk": "2.9.0",
     "cookie": "^0.6.0",
     "crypto-js": "^4.1.1",
     "jwt-decode": "^3.1.2",
