--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "test": "jest",
     "release": "release-it",
     "lint": "eslint --ignore-path .eslintignore --ext .js",
+    "lint:fix": "prettier --write .",
     "dev": "cd playground && pnpm run dev"
   },
   "author": {
