--- a/package.json
+++ b/package.json
@@ -99,9 +99,9 @@
     "typescript": "^5.1.3"
   },
   "peerDependencies": {
-    "next": "^12.2.5 || ^13 || ^14",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "next": "^12.2.5 || ^13 || ^14 || ^15",
+    "react": "^18 || ^19",
+    "react-dom": "^18 || ^19"
   },
   "dependencies": {
     "@babel/preset-env": "^7.25.4",
