fix: refresh token in background

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     // go to js file when using IDE functions like
     // "Go to Definition" in VSCode
     "declarationMap": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "jsx": "react"
     // "checkJs": true,
     // "strict": true
   }
