--- a/package.json
+++ b/package.json
@@ -57,9 +57,10 @@
     "build": "npx tsc && cp types.d.ts dist/types.d.ts && genversion --es6 src/utils/version.js && rollup -c",
     "prepare": "genversion --es6 src/utils/version.js && rollup -c",
     "build:watch": "genversion --es6 src/utils/version.js && rollup -c -w",
-    "test": "jest",
+    "test": "vitest",
+    "test:coverage": "vitest --coverage",
     "release": "release-it",
-    "lint": "eslint --ignore-path .eslintignore --ext .js",
+    "lint": "eslint --ignore-path .eslintignore",
     "lint:fix": "prettier --write .",
     "dev": "cd playground && pnpm run dev"
   },
@@ -82,21 +83,20 @@
     "@rollup/plugin-typescript": "^11.1.6",
     "@testing-library/react": "^14.2.1",
     "@types/cookie": "^0.5.3",
-    "@types/jest": "^29.5.12",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@vitest/coverage-v8": "2.1.6",
     "changelogen": "^0.5.5",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "genversion": "^3.1.1",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "happy-dom": "^15.11.6",
     "prettier": "^3.0.1",
     "release-it": "^16.1.3",
     "rollup": "^2.73.0",
     "rollup-plugin-terser": "^7.0.2",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "vitest": "^2.1.6"
   },
   "peerDependencies": {
     "next": "^12.2.5 || ^13 || ^14 || ^15",
