--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     // Tells TypeScript to read JS files, as
     // normally they are ignored as source files
     "allowJs": true,
+    "jsx": "react",
     // Generate d.ts files
     "declaration": true,
     // This compiler run should
