--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     // This compiler run should
     // only output d.ts files
     "emitDeclarationOnly": true,
+    "skipLibCheck": true,
     // Types should go into this directory.
     // Removing this would place the .d.ts files
     // next to the .js files
