--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Install dependencies and build 🔧
         run: npm ci
+      - run: npm lint
       - name: Initialize Git user
         run: |
           git config --global user.email "engineering@kinde.com"
