deps: update dependancies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,11 +16,13 @@
     // Types should go into this directory.
     // Removing this would place the .d.ts files
     // next to the .js files
-    "outDir": "dist/types",
+    "outDir": "./dist",
     // go to js file when using IDE functions like
     // "Go to Definition" in VSCode
     "declarationMap": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "declarationDir": "./dist/types",
     // "checkJs": true,
     // "strict": true
   }
