--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/cjs/index.js",
   "module": "dist/index.js",
   "typings": "dist/types/index.d.ts",
+  "type": "module",
   "exports": {
     ".": {
       "import": {
@@ -13,7 +14,7 @@
       },
       "require": {
         "types": "./dist/types/index.d.ts",
-        "default": "./dist/cjs/index.js"
+        "default": "./dist/index.cjs.js"
       }
     },
     "./server": {
@@ -23,7 +24,7 @@
       },
       "require": {
         "types": "./dist/types/server/index.d.ts",
-        "default": "./dist/server/cjs/index.js"
+        "default": "./dist/server/index.cjs.js"
       }
     },
     "./components": {
@@ -33,7 +34,7 @@
       },
       "require": {
         "types": "./dist/types/components/index.d.ts",
-        "default": "./dist/components/cjs/index.js"
+        "default": "./dist/components/index.cjs.js"
       }
     },
     "./middleware": {
@@ -43,7 +44,7 @@
       },
       "require": {
         "types": "./dist/types/middleware/index.d.ts",
-        "default": "./dist/middleware/cjs/index.js"
+        "default": "./dist/middleware/index.cjs.js"
       }
     },
     "./types": {
@@ -76,27 +77,26 @@
   "bugs": "https://github.com/kinde-oss/kinde-auth-nextjs",
   "homepage": "https://kinde.com",
   "devDependencies": {
-    "@babel/core": "^7.17.12",
-    "@babel/preset-react": "^7.17.12",
-    "@babel/preset-typescript": "^7.23.3",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-typescript": "^11.1.6",
-    "@testing-library/react": "^14.2.1",
-    "@types/cookie": "^0.5.3",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitest/coverage-v8": "2.1.6",
-    "changelogen": "^0.5.5",
-    "eslint": "^8.39.0",
-    "eslint-config-prettier": "^8.8.0",
-    "genversion": "^3.1.1",
-    "happy-dom": "^15.11.6",
-    "prettier": "^3.4.1",
-    "release-it": "^16.1.3",
-    "rollup": "^2.73.0",
+    "@babel/core": "^7.26.7",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "@testing-library/react": "^16.2.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vitest/coverage-v8": "3.0.5",
+    "changelogen": "^0.5.7",
+    "eslint": "^9.20.0",
+    "eslint-config-prettier": "^10.0.1",
+    "genversion": "^3.2.0",
+    "happy-dom": "^17.0.0",
+    "prettier": "^3.4.2",
+    "release-it": "^18.1.2",
+    "rollup": "^4.34.6",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^5.1.3",
-    "vitest": "^2.1.6"
+    "typescript": "^5.7.3",
+    "vitest": "^3.0.5"
   },
   "peerDependencies": {
     "next": "^12.2.5 || ^13 || ^14 || ^15",
@@ -104,12 +104,12 @@
     "react-dom": "^18 || ^19"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-env": "^7.26.7",
     "@kinde-oss/kinde-typescript-sdk": "2.9.1",
     "@kinde/jwt-decoder": "^0.2.0",
     "@kinde/jwt-validator": "^0.4.0",
     "cookie": "^1.0.2",
-    "crypto-js": "^4.1.1",
+    "crypto-js": "^4.2.0",
     "uncrypto": "^0.1.3"
   },
   "files": [
