chore: migrate to eslint9

--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "@babel/core": "^7.26.7",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
+    "@eslint/eslintrc": "^3.3.0",
+    "@eslint/js": "^9.22.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-typescript": "^12.1.2",
     "@testing-library/react": "^16.2.0",
@@ -89,6 +91,7 @@
     "eslint": "^9.20.0",
     "eslint-config-prettier": "^10.0.1",
     "genversion": "^3.2.0",
+    "globals": "^16.0.0",
     "happy-dom": "^17.0.0",
     "prettier": "^3.4.2",
     "release-it": "^18.1.2",
