chore: remove --ignore-path from lint script (now included in eslint9 config)

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "release": "release-it",
-    "lint": "eslint --ignore-path .eslintignore",
+    "lint": "eslint",
     "lint:fix": "prettier --write .",
     "dev": "cd playground && pnpm run dev"
   },
