chore: new vite deps, remove old build/rollup related ones

--- a/package.json
+++ b/package.json
@@ -76,17 +76,14 @@
   "bugs": "https://github.com/kinde-oss/kinde-auth-nextjs",
   "homepage": "https://kinde.com",
   "devDependencies": {
-    "@babel/core": "^7.26.7",
-    "@babel/preset-react": "^7.26.3",
-    "@babel/preset-typescript": "^7.26.0",
-    "@eslint/eslintrc": "^3.3.0",
+        "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.22.0",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-typescript": "^12.1.2",
-    "@testing-library/react": "^16.2.0",
+        "@testing-library/react": "^16.2.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+"@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "3.0.7",
+"ajv": "^8.17.1",
     "changelogen": "^0.6.0",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.0.1",
@@ -95,9 +92,10 @@
     "happy-dom": "^17.0.0",
     "prettier": "^3.4.2",
     "release-it": "^18.1.2",
-    "rollup": "^4.34.6",
-    "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-preserve-directives": "^0.4.0",
     "typescript": "^5.7.3",
+"vite": "^6.2.5",
+    "vite-plugin-dts": "^4.5.3",
     "vitest": "^3.0.5"
   },
   "peerDependencies": {
@@ -106,8 +104,7 @@
     "react-dom": "^18 || ^19"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.26.7",
-    "@kinde-oss/kinde-typescript-sdk": "2.9.1",
+    "@kinde-oss/kinde-typescript-sdk": "2.10.7",
     "@kinde/jwt-decoder": "^0.2.0",
     "@kinde/jwt-validator": "^0.4.0",
     "cookie": "^1.0.2",
