--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,16 @@
 {
   // Change this to match your project
-  "include": ["src/**/*"],
+  "include": [
+    "src/**/*"
+  ],
   "compilerOptions": {
     // "jsx": "react",
     // Tells TypeScript to read JS files, as
     // normally they are ignored as source files
     "allowJs": true,
     "jsx": "react",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     // Generate d.ts files
     "declaration": true,
     // This compiler run should
