--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,15 @@
     "src/**/*"
   ],
   "compilerOptions": {
-    // "jsx": "react",
-    // Tells TypeScript to read JS files, as
-    // normally they are ignored as source files
     "allowJs": true,
+    "baseUrl": ".",
     "jsx": "react",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
+    "lib": [
+      "es6",
+      "dom"
+    ],
     // Generate d.ts files
     "declaration": true,
     // This compiler run should
