--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "release-it": "^18.1.2",
     "rollup": "^4.34.6",
     "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.8.1",
     "typescript": "^5.7.3",
     "vitest": "^3.0.5"
   },
