--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "allowJs": true,
     "baseUrl": ".",
     "jsx": "react",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ES2022",
+    "moduleResolution": "bundler",
     "lib": [
       "es6",
       "dom"
