--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "release": "release-it",
-    "lint": "eslint",
+    "lint": "prettier --check .",
     "lint:fix": "prettier --write .",
     "dev": "cd playground && pnpm run dev"
   },
