--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     }
   },
   "scripts": {
-    "build": "genversion --es6 src/utils/version.js && vite build",
-    "build:watch": "genversion --es6 src/utils/version.js && vite build --watch",
+    "build": "vite build",
+    "build:watch": "vite build --watch",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "release": "release-it",
@@ -109,6 +109,7 @@
     "@kinde/jwt-validator": "^0.4.0",
     "cookie": "^1.0.2",
     "crypto-js": "^4.2.0",
+    "destr": "^2.0.5",
     "uncrypto": "^0.1.3"
   },
   "files": [
