--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kinde-oss/kinde-auth-nextjs",
-  "version": "2.6.0",
+  "version": "2.6.1-3",
   "description": "Kinde Auth SDK for NextJS",
   "main": "dist/cjs/index.js",
   "module": "dist/index.js",
@@ -54,8 +54,8 @@
     }
   },
   "scripts": {
-    "build": "genversion --es6 src/utils/version.js && vite build",
-    "build:watch": "genversion --es6 src/utils/version.js && vite build --watch",
+    "build": "vite build",
+    "build:watch": "vite build --watch",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "release": "release-it",
@@ -103,11 +103,13 @@
     "react-dom": "^18 || ^19"
   },
   "dependencies": {
+    "@kinde-oss/kinde-auth-react": "^5.2.0",
     "@kinde-oss/kinde-typescript-sdk": "2.10.1",
     "@kinde/jwt-decoder": "^0.2.0",
     "@kinde/jwt-validator": "^0.4.0",
     "cookie": "^1.0.2",
     "crypto-js": "^4.2.0",
+    "destr": "^2.0.5",
     "uncrypto": "^0.1.3"
   },
   "files": [
