chore: update release-it config

--- a/.release-it.json
+++ b/.release-it.json
@@ -1,6 +1,6 @@
 {
   "git": {
-    "requireBranch": "main",
+  	"requireBranch": "release/2.5",
     "commitMessage": "chore: release v${version}"
   },
   "hooks": {
