--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
   },
   "dependencies": {
     "@kinde-oss/kinde-typescript-sdk": "2.10.1",
+    "@kinde/js-utils": "^0.18.1",
     "@kinde/jwt-decoder": "^0.2.0",
     "@kinde/jwt-validator": "^0.4.0",
     "cookie": "^1.0.2",
