--- a/package.json
+++ b/package.json
@@ -4,51 +4,51 @@
   "description": "Kinde Auth SDK for NextJS",
   "main": "dist/cjs/index.js",
   "module": "dist/index.js",
-  "typings": "dist/types/index.d.ts",
+  "typings": "dist/types/src/index.d.ts",
   "exports": {
     ".": {
       "import": {
-        "types": "./dist/types/index.d.ts",
+        "types": "./dist/types/src/index.d.ts",
         "default": "./dist/index.es.js"
       },
       "require": {
-        "types": "./dist/types/index.d.ts",
+        "types": "./dist/types/src/index.d.ts",
         "default": "./dist/index.cjs.js"
       }
     },
     "./server": {
       "import": {
-        "types": "./dist/types/server/index.d.ts",
+        "types": "./dist/types/src/server/index.d.ts",
         "default": "./dist/server.es.js"
       },
       "require": {
-        "types": "./dist/types/server/index.d.ts",
+        "types": "./dist/types/src/server/index.d.ts",
         "default": "./dist/server.cjs.js"
       }
     },
     "./components": {
       "import": {
-        "types": "./dist/types/components/index.d.ts",
+        "types": "./dist/types/src/components/index.d.ts",
         "default": "./dist/components.es.js"
       },
       "require": {
-        "types": "./dist/types/components/index.d.ts",
+        "types": "./dist/types/src/components/index.d.ts",
         "default": "./dist/components.cjs.js"
       }
     },
     "./middleware": {
       "import": {
-        "types": "./dist/types/middleware/index.d.ts",
+        "types": "./dist/types/src/middleware/index.d.ts",
         "default": "./dist/middleware.es.js"
       },
       "require": {
-        "types": "./dist/types/middleware/index.d.ts",
+        "types": "./dist/types/src/middleware/index.d.ts",
         "default": "./dist/middleware.cjs.js"
       }
     },
     "./types": {
       "import": {
-        "types": "./dist/types/types.d.ts",
+        "types": "./dist/types/src/types.d.ts",
         "default": "./dist/index.js"
       }
     }
