--- a/package.json
+++ b/package.json
@@ -103,8 +103,9 @@
     "react-dom": "^18 || ^19"
   },
   "dependencies": {
+    "@kinde-oss/kinde-auth-react": "^5.7.0",
     "@kinde-oss/kinde-typescript-sdk": "2.13.1",
-    "@kinde/js-utils": "^0.24.0",
+    "@kinde/js-utils": "^0.25.0",
     "@kinde/jwt-decoder": "^0.2.0",
     "@kinde/jwt-validator": "^0.4.0",
     "cookie": "^1.0.2",
