--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "vitest": "^3.2.4"
   },
   "peerDependencies": {
-    "next": "^12.3.5 || ^13.5.9 || ^14.2.25 || ^15.2.3",
+    "next": "^12.3.5 || ^13.5.9 || ^14.2.25 || ^15.2.3 || ^16.0.0",
     "react": "^18 || ^19",
     "react-dom": "^18 || ^19"
   },
