chore: update CODEOWNERS for dependency files

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,7 @@
 * @kinde-oss/giants-kinde
+package.json @kinde-oss/sdk-engineers
+**/package.json @kinde-oss/sdk-engineers
+package.json @kinde-oss/sdk-engineers
+**/package.json @kinde-oss/sdk-engineers
+pnpm-lock.yaml @kinde-oss/sdk-engineers
+**/pnpm-lock.yaml @kinde-oss/sdk-engineers
