chore: update peerDependencies for next, react, and react-dom versions

--- a/package.json
+++ b/package.json
@@ -98,9 +98,9 @@
     "vitest": "^4.0.0"
   },
   "peerDependencies": {
-    "next": "^12.3.5 || ^13.5.9 || ^14.2.25 || ^15.2.3 || ^16.0.0",
-    "react": "^18 || ^19",
-    "react-dom": "^18 || ^19"
+    "next": "^12.3.5 || ^13.5.9 || ^14.2.25 || >=15.5.7 || >=16.0.7",
+    "react": "^18.0.0 || >=19.2.1",
+    "react-dom": "^18.0.0 || >=19.2.1"
   },
   "dependencies": {
     "@kinde-oss/kinde-auth-react": "5.10.1",
