--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "lint": "prettier --check .",
     "lint:fix": "prettier --write .",
     "dev": "cd playground && pnpm run dev",
-    "dev:prepare": "rm -rf playground && git clone https://github.com/kinde-starter-kits/kinde-nextjs-app-router-starter-kit playground && npm link && cd playground && npm i && mv .env_sample .env && rm -rf .git && npm link @kinde-oss/kinde-auth-nextjs"
+    "dev:prepare": "rm -rf playground && git clone --depth 1 https://github.com/kinde-starter-kits/kinde-nextjs-app-router-starter-kit playground && rm -rf playground/.git && mv playground/.env_sample playground/.env && cd playground && pnpm i && pnpm link .."
   },
   "author": {
     "name": "Kinde",
